# C_labs_programming

./: README.md  fix  lab5
lab1C/: main  main.c
lab2CCC/: CMakeLists.txt  main.c
lab3CCC/: CMakeLists.txt  main.c
lab4/: CMakeLists.txt  main.c  triangle.c  triangle.h
lab5/: CMakeLists.txt  main.c  matrix_ops.c  matrix_ops.h
lab6/: CMakeLists.txt  main.c
lab7/: CMakeLists.txt  main.c
lab8/: CMakeLists.txt  main.c
